ArcGIS service/layer support Flesh out service detail edit page
Modify geonetwork - use 2.6.x branch from github, must set all records to public (csw server configuration)
This is to prevent geonetwork from crashing after importing several thousand records
After about ~1600 rapid insert transactions to geonetwork 2.6.4, tomcat hangs:
“Too many open files” and/or
All database connections locked up
http://trac.osgeo.org/geonetwork/ticket/1098
Build geonetwork 2.6.x from source, includes patches for this problem, but:
this breaks the code that tries to make record publicly visible after insert
solution: make all records visible by default from geonetwork admin console (todo: set this in configuration file somehow?), and comment out that part of the code
Also tried out geonetwork 2.10, required many changes to code, got it to work but will stick with 2.6.x for now until further testing can be done

--- a/geonode/contrib/services/templates/services/service_detail.html
+++ b/geonode/contrib/services/templates/services/service_detail.html
@@ -45,7 +45,9 @@ Ext.onReady(function() {
   <p><strong>{% trans "Name:" %}</strong> {{service.name}}</p>
   <p><strong>{% trans "URL:" %}</strong> {{service.base_url}}</p>
   <p><strong>{% trans "Abstract:" %}</strong> {{service.abstract}}</p>
+  <p><strong>{% trans "Keywords:" %}</strong> {{ service.keywords.all|join:", " }}</p>
   <p><strong>{% trans "Contact:" %}</strong> <a href="{{ service.owner.get_profile.get_absolute_url }}">{{ service.owner }}</a></p>
+
     {% autoescape off %}
     <h3>{% trans "Layers" %}</h3>
     <p>{% trans "This Service contains the following layers" %} </p>
