Get auto-registration from permissions form working with Django 1.5

--- a/geonode/templates/account/login.html
+++ b/geonode/templates/account/login.html
@@ -7,7 +7,7 @@
     <div id="page-breadcrumb"><span>{% trans "Sign In" %}</span></div>
 {% endblock %}
 {% block body %}
-    <div class="twocol">
+    <div class="onecol">
         <h2>{% trans "WorldMap Login" %}</h2>
         {% if form.errors %}
             <p>{% trans "Your username and password didn't match. Please try again." %}</p>
