--- a/geonode/templates/account/email_confirm.html
+++ b/geonode/templates/account/email_confirm.html
@@ -6,18 +6,22 @@
 {% block head_title %}{% trans "Confirm Email" %}{% endblock %}
 
 {% block body %}
-    <div class="row">
-        <div class="span12">
-            <form method="post" action="{% url "account_confirm_email" key=confirmation.key %}" class="form-horizontal">
-                <legend>{% trans "Confirm Email" %}</legend>
-                <fieldset>
+    <div class="onecol">
+        <h2>{% trans "Confirm Email" %}</h2>
+
+        <div class="row">
+            <div class="span12">
+                <form method="post" action="{% url "account_confirm_email" key=confirmation.key %}"
+                      class="form-horizontal">
                     {% csrf_token %}
-                    <p>{% blocktrans with email=confirmation.email_address.email %}Confirm email address <b>{{ email }}</b>?{% endblocktrans %}</p>
+                    <p>{% blocktrans with email=confirmation.email_address.email %}Confirm email address
+                        <b>{{ email }}</b>?{% endblocktrans %}</p>
+
                     <div class="form-actions">
                         <button type="submit" class="btn btn-primary">{% trans "Confirm" %}</button>
                     </div>
-                </fieldset>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 {% endblock %}
