--- a/geonode/templates/account/email_confirmed.html
+++ b/geonode/templates/account/email_confirmed.html
@@ -6,6 +6,8 @@
 {% block head_title %}{% trans "Email confirmed" %}{% endblock %}
 
 {% block body %}
-    <h1>{% trans "Email confirmed" %}</h1>
+    <div class="onecol">
+    <h2>{% trans "Email confirmed" %}</h2>
     <p>{% blocktrans with email=confirmation.email_address.email %}You have confirmed <b>{{ email }}</b>{% endblocktrans %}</p>
+    </div>
 {% endblock %}
