--- a/geonode/templates/account/password_change.html
+++ b/geonode/templates/account/password_change.html
@@ -7,6 +7,7 @@
 {% block head_title %}{% trans "Change password" %}{% endblock %}
 
 {% block body %}
+    <div class="onecol">
     <form method="POST" action="">
         <legend>{% trans "Change password" %}</legend>
         <fieldset>
@@ -17,4 +18,5 @@
             </div>
         </fieldset>
     </form>
+    </div>
 {% endblock %}
