--- a/geonode/templates/maps/layer.html
+++ b/geonode/templates/maps/layer.html
@@ -104,7 +104,7 @@
     Ext.get(Ext.DomQuery.select("select[@name='default-style']")).on("change", function(evt, elem) {
         Ext.Ajax.request({
             method: "post",
-                    url: "{% url "data_style" "layer.typename" %}",
+                    url: "{% url "data_style" layer.typename %}",
             params: {"defaultStyle" : elem.value}
         });
     });
@@ -121,7 +121,7 @@
         {% if can_change_permissions %}
             new GeoNode.WorldMapPermissionsEditor({
                 renderTo: "permissions_form",
-                submitTo: "{% url "geonode.maps.views.ajax_layer_permissions_by_email" "layer.typename" %}",
+                submitTo: "{% url "geonode.maps.views.ajax_layer_permissions_by_email" layer.typename %}",
                 userLookup: "{% url "geonode.views.ajax_lookup_email" %}",
                 customGroup: "{{ customGroup }}",
                 permissions: {{ permissions_json }},
@@ -133,7 +133,7 @@
                 },
                 listeners: {
                     updated: function(perms) {
-                        var submitTo = "{% url "geonode.maps.views.ajax_layer_permissions_by_email" "layer.typename" %}";
+                        var submitTo = "{% url "geonode.maps.views.ajax_layer_permissions_by_email" layer.typename %}";
                         Ext.Ajax.request({ url: submitTo, jsonData: perms.writePermissions() });
                     }
                 }
@@ -317,7 +317,7 @@
             <input type="hidden" name="next" value="{{ request.path }}" />
         </form>
     {% else %}
-        <p><a href="{% url "auth_login" %}">{% trans "Login to add a comment" %}</a></p>
+        <p><a href="{% url "account_login" %}">{% trans "Login to add a comment" %}</a></p>
     {% endif %}
 </div>
 
@@ -486,27 +486,27 @@
             {% if layer.local %}
             <a href="{% url "data_metadata" "layer.service_typename" %}">
             {% else %}
-            <a href="{% url "data_metadata" "layer.service_typename" %}">
+            <a href="{% url "data_metadata" layer.service_typename %}">
             {% endif %}
             {% trans "Update the description of this data" %}
         </a> </li>
         <li>
             {% if layer.local %}
-            <a href="{% url layer_contacts layer.service_typename%}">
+            <a href="{% url "layer_contacts" layer.service_typename%}">
             {% else %}
-            <a href="{% url layer_contacts layer.service_typename%}">
+            <a href="{% url "layer_contacts" layer.service_typename%}">
             {% endif %}
 
                 {% trans "Update the contacts for this data" %}
             </a> </li>
         {% if layer.local %}
-        <li> <a href="{% url data_replace layer.service_typename%}">
+        <li> <a href="{% url "data_replace" layer.service_typename%}">
             {% trans "Upload a new version of this data" %}
         </a></li>
         {% endif %}
         {% endif %}
         {% if can_delete %}
-            <li><a href="{% url "data_remove" "layer.service_typename" %}">
+            <li><a href="{% url "data_remove" layer.service_typename %}">
             {% trans "Remove" %}
         </a></li>
         {% endif %}
