--- a/geonode/templates/maphelp.html
+++ b/geonode/templates/maphelp.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}themeboilerplate-min.css" media="screen" />
    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}themesite.css" /> 
    <!--[if lte IE 6]><link rel="stylesheet" href="{{STATIC_URL}}themeboilerplate-ie-min.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
-  <script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script>
+  <script type="text/javascript" src="{% url "django.views.i"  %}18n.javascript_catalog %}"></script>
   <script type="text/javascript" src="{% url "geonode.views.lang" %}"></script>
 </head>
 <body>
