--- a/geonode/templates/maps.html
+++ b/geonode/templates/maps.html
@@ -57,7 +57,7 @@ Ext.onReady(function(){
     <p>{% trans "Use WorldMap to create your own maps.  Add layers from WorldMap or remote services, and style them." %}
     </p>
     <p>
-      <a href="{%url maps_new %}">{% trans "Create your own map" %}</a>
+      <a href="{% url "maps_new"  %}">{% trans "Create your own map" %}</a>
     </p>
   </div>
 
