--- a/geonode/templates/maps/layer_describe.html
+++ b/geonode/templates/maps/layer_describe.html
@@ -82,7 +82,7 @@
 
 
 
-    <form action="{% url "data_metadata" "layer.service_typename" %}" method="POST">
+    <form action="{% url "data_metadata" layer.service_typename %}" method="POST">
 
 
 
