--- a/geonode/templates/maps/layer_remove.html
+++ b/geonode/templates/maps/layer_remove.html
@@ -29,7 +29,7 @@
 {% block body %}
 
 <h3>{% trans "Are you sure you want to remove"  %} <strong>{{layer.typename}}</strong>?</h3>
-<form action="{% url "data_remove" "layer.typename" %}" method="POST" class="inline">
+<form action="{% url "data_remove" layer.typename %}" method="POST" class="inline">
     {% csrf_token %}
     <input type="hidden" value="{{layer.typename}}" />
     <input type="submit" value="{% trans "Yes, delete"  %}" class="submit_btn"/>
