--- a/geonode/templates/maps/map_remove.html
+++ b/geonode/templates/maps/map_remove.html
@@ -8,12 +8,12 @@
 
 <script type="text/javascript">
     var app;
-    var mapurl = "{% url "geonode.maps.views.view" "map.id" %}";
+    var mapurl = "{% url "geonode.maps.views.view" map.id %}";
     {% if map.officialurl %}
-        mapurl="{% url "geonode.maps.views.official_site" "map.officialurl" %}";
+        mapurl="{% url "geonode.maps.views.official_site" map.officialurl %}";
         {% else %}
         {% if map.url %}
-            mapurl="{% url "geonode.maps.views.view" "map.url" %}";
+            mapurl="{% url "geonode.maps.views.view" map.url %}";
             {% endif %}
             {% endif %}
 
