--- a/geonode/templates/site_base.html
+++ b/geonode/templates/site_base.html
@@ -73,7 +73,7 @@
                 {% block breadcrumb %}
                     {% if urlsuffix %}
                         {% if map.officialurl %}
-                            <div id="page-breadcrumb"><a href="{% url "geonode.maps.views.official_site" "map.officialurl" %}">{{title}}</a></div>
+                            <div id="page-breadcrumb"><a href="{% url "geonode.maps.views.official_site" map.officialurl %}">{{title}}</a></div>
                         {% else %}
                             <div id="page-breadcrumb"><span>{{title}}</span></div>
                         {% endif %}
