--- a/geonode/contrib/services/templates/services/service_list.html
+++ b/geonode/contrib/services/templates/services/service_list.html
@@ -13,8 +13,8 @@
 
 {% for service in services %}
 <tr>
-<td><a href='{% url "service_detail" "service.id" %}'>{{ service.title }}</a></td>
-<td><a href='{% url "service_detail" "service.id" %}'>{{ service.base_url }}</a></td>
+<td><a href='{% url "service_detail" service.id %}'>{{ service.title }}</a></td>
+<td><a href='{% url "service_detail" service.id %}'>{{ service.base_url }}</a></td>
 </tr>
 {% endfor %}
 </table>
