--- a/geonode/templates/maps/layer_contacts.html
+++ b/geonode/templates/maps/layer_contacts.html
@@ -50,7 +50,7 @@
 {% block body %}
 <div class="twocol">
     <h2> {% trans "Editing contacts for " %} {{ layer.typename }} </h2>
-    <form action="{% url "layer_contacts" "layer.service_typename" %}" method="POST">
+    <form action="{% url "layer_contacts" layer.service_typename %}" method="POST">
         {% csrf_token %}
         <ul class="form">
             {{ contact_form.as_ul }}
