--- a/geonode/templates/maps/layer_upload.html
+++ b/geonode/templates/maps/layer_upload.html
@@ -72,12 +72,12 @@ Ext.onReady(function(){
     });
 
 
-    var mapurl = "{% url "geonode.maps.views.view" "map.id" %}";
+    var mapurl = "{% url "geonode.maps.views.view" map.id %}";
     {% if map.officialurl %}
-        mapurl="{% url "geonode.maps.views.official_site" "map.officialurl" %}";
+        mapurl="{% url "geonode.maps.views.official_site" map.officialurl %}";
         {% else %}
         {% if map.url %}
-            mapurl="{% url "geonode.maps.views.view" "map.url" %}";
+            mapurl="{% url "geonode.maps.views.view" map.url %}";
             {% endif %}
             {% endif %}
 
