--- a/geonode/templates/mobile.html
+++ b/geonode/templates/mobile.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}theme/site.css" />
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}theme/site_mobile.css" />
 
-    <script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script>
+    <script type="text/javascript" src="{% url "django.views.i"  %}18n.javascript_catalog %}"></script>
     <script type="text/javascript" src="{% url "lang" %}"></script>
     {% autoescape off %}
         {{ GOOGLE_ANALYTICS_CODE }}
