--- a/geonode/templates/profiles/profile_list.html
+++ b/geonode/templates/profiles/profile_list.html
@@ -1,14 +1,55 @@
 {% extends "profiles/base.html" %}
-{% load avatar_tags %}
-
-{% block content %}
-<div class="onecol">
-{% for profile in object_list %}
-   {% if profile.user %}
-   <ul>
-     <li>{% avatar profile.user 50 %}<a href="{{profile.get_absolute_url}}">{{ profile.name|default:profile.user.username}}</a></li>
-   </ul>
-    {% endif %}
-{% endfor %}
-</div>
+{% block head %}
+    {% include "geonode/app_header.html" %}
+    {{ block.super }}
 {% endblock %}
+{% load i18n avatar_tags %}
+{% block breadcrumb %}
+    <a id="logo" href="{% url "home" %}"><img src="{{STATIC_URL}}theme/img/WorldMap-Logo_26px.png" border="0"></a>
+    <div id="page-breadcrumb"><span>Profile for {{ profile.username }}</span></div>
+{% endblock %}
+{% block content %}
+    <div class="onecol">
+        {% for profile in contacts %}
+            {% if profile.user %}
+                <ul>
+                    <li>{% avatar profile.user 50 %}<a href="{{profile.get_absolute_url}}">{{ profile.name|default:profile.user.username}}</a></li>
+                </ul>
+            {% endif %}
+        {% endfor %}
+
+        <div class="pagination">
+    <span class="step-links">
+        {% if contacts.has_previous %}
+            <a href="?page={{ contacts.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ contacts.number }} of {{ contacts.paginator.num_pages }}.
+        </span>
+
+        {% if contacts.has_next %}
+            <a href="?page={{ contacts.next_page_number }}">next</a>
+        {% endif %}
+    </span>
+        </div>
+
+    </div>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
