--- a/geonode/templates/sites/index.html
+++ b/geonode/templates/sites/index.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}/{{ theSite.urlSuffix }}/boilerplate-min.css" media="screen" />
 <!--[if lte IE 6]><link rel="stylesheet" href="{{STATIC_URL}}themeboilerplate-ie-min.css" type="text/css" media="screen" charset="utf-8"><![endif]-->
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}/{{ theSite.urlSuffix }}/site.css" media="screen" />
-<script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script>
+<script type="text/javascript" src="{% url "django.views.i"  %}18n.javascript_catalog %}"></script>
 <script type="text/javascript" src="{% url "geonode.views.lang" %}"></script>
 
 
