Get rid of simplejson Use modified 'vectorformats' on github that doesn't use simplejson clean up some template issues update gxp

--- a/geonode/templates/maps/layer_describe_tab.html
+++ b/geonode/templates/maps/layer_describe_tab.html
@@ -63,7 +63,7 @@
     {% if layer.local %}
     <form action="{% url "data_metadata" layer.typename %}" method="POST"  id="worldmap_describe_form">
     {% else %}
-    <form action="{% url "data_metadata"  %} layer.service layer.typename %}" method="POST"  id="worldmap_describe_form">
+    <form action="{% url "data_metadata"  layer.service layer.typename %}" method="POST"  id="worldmap_describe_form">
     {% endif %}
 
 
