Work on cascading WMS support

--- a/geonode/templates/maps/layer.html
+++ b/geonode/templates/maps/layer.html
@@ -356,10 +356,12 @@
 
     <h3> {% trans "Legend" %} </h3>
     <p>
-    {% if layer.service and layer.service.ptype == "gxp_wmscsource" %}
+    {% if layer.local %}
+        <img src="{{ GEOSERVER_BASE_URL }}wms?request=GetLegendGraphic&format=image%2Fpng&width=20&height=20&layer={{ layer.typename }}&version=1.1.0&legend_options=fontAntiAliasing%3Atrue%3BfontSize%3A12%3B" />
+    {% elif layer.service and layer.service.ptype == "gxp_wmscsource" %}
         <img src="{{ layer.service.base_url }}?request=GetLegendGraphic&format=image%2Fpng&width=20&height=20&layer={{ layer.typename }}&version=1.1.0%2Fpng&legend_options=fontAntiAliasing%3Atrue%3BfontSize%3A12%3B" />
     {% else %}
-        <img src="{{ GEOSERVER_BASE_URL }}wms?request=GetLegendGraphic&format=image%2Fpng&width=20&height=20&layer={{ layer.typename }}&version=1.1.0&legend_options=fontAntiAliasing%3Atrue%3BfontSize%3A12%3B" />
+        {%  trans "Legend not available" %}
     {% endif %}
     </p>
 
@@ -483,21 +485,12 @@
         {% if user.is_authenticated %}
         {% if can_change %}
         <li>
-            {% if layer.local %}
             <a href="{% url data_metadata layer.service_typename %}">
-            {% else %}
-            <a href="{% url data_metadata layer.service_typename  %}">
-            {% endif %}
             {% trans "Update the description of this data" %}
         </a> </li>
         <li>
-            {% if layer.local %}
             <a href="{% url layer_contacts layer.service_typename%}">
-            {% else %}
-            <a href="{% url layer_contacts layer.service_typename%}">
-            {% endif %}
-
-                {% trans "Update the contacts for this data" %}
+            {% trans "Update the contacts for this data" %}
             </a> </li>
         {% if layer.local %}
         <li> <a href="{% url data_replace layer.service_typename%}">
