--- a/geonode/templates/account/signup.html
+++ b/geonode/templates/account/signup.html
@@ -1,11 +1,11 @@
-{% extends "site_base.html" %}
+Si{% extends "site_base.html" %}
 
 {% load url from future %}
 {% load i18n %}
 {% load bootstrap_tags %}
 
 {% block head_title %}{% trans "Sign up" %}{% endblock %}
-
+custom_
 {% block body %}
     <div class="row">
         <div class="span8">
