--- a/geonode/contrib/services/templates/services/service_detail.html
+++ b/geonode/contrib/services/templates/services/service_detail.html
@@ -49,6 +49,20 @@ Ext.onReady(function() {
   <p><strong>{% trans "Contact:" %}</strong> <a href="{{ service.owner.get_profile.get_absolute_url }}">{{ service.owner }}</a></p>
 
     {% autoescape off %}
+    {%  if services %}
+        <h3>{% trans "Services" %}</h3>
+        <p>{% trans "This CSW server contains the following services" %} </p>
+        <table>
+            <tr><th style="width:50%">Title</th><th>Description</th></tr>
+            {% for service in services %}
+                    <tr>
+                        <td><a href='{%  url service_detail service.id %}'>{{service.title}}</a></td>
+                        <td>{{service.abstract}}</td>
+                    </tr>
+            {% endfor %}
+        </table>
+    {% endif %}
+    {% if layers %}
     <h3>{% trans "Layers" %}</h3>
     <p>{% trans "This Service contains the following layers" %} </p>
     <table>
@@ -62,6 +76,8 @@ Ext.onReady(function() {
             {% endif %}
         {% endfor %}
     </table>
+    {%  endif %}
+
     {% endautoescape %}
 
 </div>
