--- a/geonode/contrib/services/templates/services/service_detail.html
+++ b/geonode/contrib/services/templates/services/service_detail.html
@@ -75,6 +75,26 @@ Ext.onReady(function() {
             </tr>
             {% endif %}
         {% endfor %}
+        <tr>
+            <td colspan="2">
+                <div class="pagination">
+                    <span class="step-links">
+                    {% if layers.has_previous %}
+                        <a href="?page={{ layers.previous_page_number }}">previous</a>
+                    {% endif %}
+
+                    <span class="current">
+                            Page {{ layers.number }} of {{ layers.paginator.num_pages }}.
+                    </span>
+
+                    {% if layers.has_next %}
+                        <a href="?page={{ layers.next_page_number }}">next</a>
+                    {% endif %}
+                    </span>
+                </div>
+            </td>
+
+        </tr>
     </table>
     {%  endif %}
 
