Make sure that ArcGIS services which don't support web mercator are not added. Improve error handling.

--- a/geonode/contrib/services/templates/services/service_register.html
+++ b/geonode/contrib/services/templates/services/service_register.html
@@ -36,11 +36,13 @@ $( document ).ready(function() {
                             attr('href', "/services/" + data[item].service_id).
                             text(data[item].service_title||data[item].service_name)).
                             appendTo("#responseDiv");
+                            $("#responseDiv").show();
                     }
                     else {
-                       $('<h4>').attr("class", "result").text(data[item].msg).appendTo("#responseDiv");
+                        $(".error").html(data[item].msg);
+                        $(".error").show();
                     }
-                    $("#responseDiv").show();
+
                 }
 
             },
