--- a/geonode/worldmap/templates/base.html
+++ b/geonode/worldmap/templates/base.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <title>{% block title %}{{ SITE_NAME }}{% endblock %}</title>
     {% block head %}
-
       <link href="{{ STATIC_URL }}geonode/css/base.css" rel="stylesheet" />
       <link href="{{ STATIC_URL }}worldmap/css/base.css" rel="stylesheet" />
       <link href="{{ STATIC_URL }}worldmap/css/site.css" rel="stylesheet" />
@@ -148,7 +147,12 @@
                           {% endif %}
                           <li><a href="{% url "recent-activity" %}"><i class="icon-fire"></i> {% trans "Recent Activity" %}</a></li>
                           <li class="divider"></li>
-                          <li><a href="{% url "account_logout" %}"><i class="icon-off"></i> {% trans "Log out" %}</a></li>
+                          <li>
+                           <form action="{% url "account_logout" %}?next={{ request.path }}" id="logout_form"  method="post">
+                            {% csrf_token %}
+                            <a href="javascript:{}" onclick="document.getElementById('logout_form').submit();"><i class="icon-off"></i> {% trans "Log out" %}</a>
+                           </form>
+                          </li>
                         </ul>
                       </li> <!-- ./dropdown user -->
                       <li class="divider-v">|</li>
@@ -210,7 +214,7 @@
                     <a href="{% url "maps_browse" %}">{% trans "Maps" %}</a>
                   </li>
 
-                  {% if DOCUMENTS_APP %}
+                  {% if USE_DOCUMENTS %}
                   <li id="nav_documents">
                     <a href="{% url "documents_browse" %}">{% trans "Documents" %}</a>
                   </li>
@@ -218,6 +222,11 @@
                   <li id="nav_people">
                     <a href="{% url "profile_browse" %}">{% trans "People" %}</a>
                   </li>
+                  {% if GROUPS_APP %}
+                  <li id="nav_groups">
+                    <a href="{% url "group_list" %}">{% trans "Groups" %}</a>
+                  </li>
+                  {% endif %}
                   <li id="nav_search">
                     <a href="{% url "advanced_search" %}">{% trans "Search" %}</a>
                   </li>
@@ -332,7 +341,7 @@
               limit: 10,
               sort: 'none',
               start: page,
-              q: term
+              q: term.replace(/[`~!@#$%^&*()_|+\-=?;:'",.<>\{\}\[\]\\\/]/gi, '')
             }
           },
           results: function(data, page) {
@@ -346,6 +355,7 @@
           }          
         },
         createSearchChoice:function(term, data) {
+            term = term.replace(/[`~!@#$%^&*()_|+\-=?;:'",.<>\{\}\[\]\\\/]/gi, '');
             if ($(data).filter(function() {
                 return this.text.localeCompare(term)===0; }).length===0) {
                     return {id:term, text:term};
