--- a/geonode/templates/maps/layer_describe_tab.html
+++ b/geonode/templates/maps/layer_describe_tab.html
@@ -184,7 +184,7 @@
 	Ext.select(".helptext").on('mouseout',hideModal);
 	hideModal();
     
-    Ext.Ajax.timeout = 120000;
+    Ext.Ajax.timeout = 120000cur;
     var ajaxSubmit = function() {
         Ext.MessageBox.wait('Saving ...');
         var htmlAbstract = myNicEditor.instanceById("id_layer-abstract").getContent();
