--- a/geonode/templates/site_base.html
+++ b/geonode/templates/site_base.html
@@ -7,9 +7,9 @@
 <head>
   <title>{% block title %} {{ SITENAME }} {% endblock %}</title>
   <link rel="shortcut icon" href="{{ STATIC_URL }}theme/img/favicon.ico"/>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.js" type="text/javascript"></script>
-  <script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/ext/adapter/jquery/ext-jquery-adapter.js"></script>
-  {% include 'autocomplete_light/static.html' %}    
+    <script src="{{ STATIC_URL }}geonode/externals/misc/jquery.js"></script>
+    <script type="text/javascript" src="{{ GEONODE_CLIENT_LOCATION }}externals/ext/adapter/jquery/ext-jquery-adapter.js"></script>
+  {% include 'autocomplete_light/static.html' %}
   {% block head_extra_meta %}{% endblock %}
   {% block head %}
 
@@ -63,7 +63,7 @@
         });
     </script>
 </head>
-<body>
+<body class="{% block body_class %}{% endblock %}">
 {% block start_body_js %}{% endblock %}
 <div id="wrap">
 
@@ -145,5 +145,6 @@
 
 {% block extra_body %}{% endblock %}{% block end_body_js %}{% endblock %}
   <div id="modalhelp" class="modal_help"></div>
+{% block extra_script %}{% endblock extra_script %}
 </body>
 </html>
